# socketweb

./: Cargo.toml  base.html
public/: index.html  main.js  style.css
public/another/: index.html
src/: main.rs  ws.rs
